<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@color/gelo">
    <ScrollView android:layout_alignParentTop="true"
        android:layout_above="@+id/bottom_lem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
	    <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
		    <RadioGroup android:id="@+id/lem_radioGroup" 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="left"
		        android:padding="10dp">
		        <RadioButton android:text="@string/lem_2min" 
		            android:id="@+id/lem_2min"
		            android:checked="true"
		            android:textSize="18sp"
		            android:textColor="#000"/>
		        <RadioButton android:text="@string/lem_5min" 
		            android:id="@+id/lem_5min"
		            android:textSize="18sp"
		            android:textColor="#000"/>
		        <RadioButton android:text="@string/lem_10min" 
		            android:id="@+id/lem_10min"
		            android:textSize="18sp"
		            android:textColor="#000"/>
		        <RadioButton android:text="@string/lem_15min" 
		            android:id="@+id/lem_15min"
		            android:textSize="18sp"
		            android:textColor="#000"/>
		        <RadioButton android:text="@string/lem_30min" 
		            android:id="@+id/lem_30min"
		            android:textSize="18sp"
		            android:textColor="#000"/>
		        <RadioButton android:text="@string/lem_45min" 
		            android:id="@+id/lem_45min"
		            android:textSize="18sp"
		            android:textColor="#000"/>
		        <RadioButton android:text="@string/lem_1hora" 
		            android:id="@+id/lem_1hora"
		            android:textSize="18sp"
		            android:textColor="#000"/>	       
		    </RadioGroup>
		    <LinearLayout android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="5dp"
		        android:orientation="vertical"
		        android:background="@drawable/fundo_cinza_claro_bordas"
		        android:layout_marginLeft="-2dp"
		        android:layout_marginRight="-2dp">
			    <TextView android:text="@string/atencao"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="14sp"
					android:textColor="#FF0000"
					android:textStyle="bold"
					android:gravity="center"
					android:layout_marginTop="5dp"/>
			    <TextView android:text="@string/lembrete_obs"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="#000"
			        android:textSize="14sp"
			        android:gravity="center"
			        android:layout_marginBottom="10dp"/>
		    </LinearLayout>
		</LinearLayout>	    
    </ScrollView>
    
    <LinearLayout android:id="@+id/bottom_lem" 
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:background="@drawable/botao">
	    <Button android:id="@+id/ins_lem_cancel"
		    style="@style/tema_botao" 
		    android:text="@string/b_cancelar"
		    android:layout_height="50dp"
		    android:layout_width="0dp"
		    android:layout_weight="1"/>	
		<View android:layout_width="0.6dp" 
	            android:layout_height="fill_parent" 
	            android:layout_marginTop="5dp"
			    android:layout_marginBottom="5dp" 
			    android:background="@color/cinza_claro"/>	
	    <Button android:id="@+id/ins_lem_ok"
			style="@style/tema_botao" 
			android:text="@string/b_ok"
			android:layout_height="50dp"
			android:layout_width="0dp"
		    android:layout_weight="1"/>	
   	</LinearLayout>
</RelativeLayout>
